# CSC4140_Computer_Graphics

./: README.md
118010141_Final_Project/: compile_run.sh  lenstester
118010141_Final_Project/CGL/: Makefile  cmake_install.cmake
118010141_Final_Project/libs/x64_msvc/release/: pt31.lib
118010141_Final_Project/src/pathtracer/: advanced_bsdf.cpp  bsdf.cpp  bsdf.h  camera.cpp  camera.h  camera_lens.cpp  pathtracer.cpp  pathtracer.h  ray.h
118010141_Final_Project/src/scene/: bvh.cpp  environment_light.cpp  environment_light.h  light.cpp  light.h  scene.h  sphere.h  triangle.cpp
118010141_HW_1/: CMakeLists.txt  compile_run.sh  main.cpp
118010141_HW_2/: CMakeLists.txt  compile_run.sh  main.cpp  rasterizer.cpp  rasterizer.hpp  readme.txt
118010141_HW_3&4/: CMakeLists.txt  compile_run.sh
118010141_HW_3&4/CGL/: README.md
118010141_HW_3&4/CGL/src/: path.cpp  viewer.cpp
118010141_HW_3&4/src/: CMakeLists.txt  drawrend.cpp  drawrend.h  rasterizer.cpp  rasterizer.h  svg.cpp  svg.h  svgparser.cpp  svgparser.h  texture.cpp  texture.h  transforms.cpp
118010141_HW_3&4/tests/: README.txt
118010141_HW_3&4/tests/outputs/: test_all.py
118010141_HW_5/Assignment5/: compile_run.sh
118010141_HW_5/Assignment5/CGL/: README.md
118010141_HW_5/Assignment5/docs/: index.html
118010141_HW_5/Assignment5/src/: halfEdgeMesh.h  student_code.cpp  student_code.h
118010141_HW_6/RayTracing1/: compile_run.sh
118010141_HW_6/RayTracing1/src/pathtracer/: bsdf.cpp  camera.cpp  pathtracer.cpp  raytraced_renderer.cpp
118010141_HW_6/RayTracing1/src/scene/: bbox.cpp  bvh.cpp  sphere.cpp
118010141_HW_6/info/: part1.html  part2.html  part2_extra.html  part3.html  part4.html  part5.html  writeup.html
118010141_HW_6/info/part3_files/: web-5d805804.css
118010141_HW_7/: compile_run.sh  exp.sh
118010141_HW_7/info/: CGL.html  Part1.html  Part2.html  Part3.html  Part4.html  writeup.html
118010141_HW_7/src/pathtracer/: advanced_bsdf.cpp  camera_lens.cpp  pathtracer.cpp
118010141_HW_7/src/scene/: environment_light.cpp
